--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -7,6 +7,7 @@
 //==fonts
 @import 'fonts/index.less';
 //==components
+@import 'component/breadcrumb.less';
 @import 'component/button.less';
 @import 'component/card.less';
 @import 'component/icon-button.less';
